fix(overflow): fix illustration to avoid overflow

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@
 .reading-illustration::after {
 	background-image: url(./assets/ilustration_1.png);
 	background-position: bottom;
-	width: 100%;
+	width: 90%;
 	height: 270px;
 	bottom: -30%;
 	left: 10%;
